--- a/css/style.css
+++ b/css/style.css
@@ -990,36 +990,78 @@ body.no-scroll {
 }
 
 /* Main container centered with max-width of 1440px */
-.container {
+.container,
+.container-navbar {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1440px;
   /* Hard upper limit */
   margin: 0 auto;
   /* Center horizontally */
-  padding: 0 64px;
+  padding: 0 80px;
   /* Inner spacing */
   box-sizing: border-box;
 }
 
+.scisp-navbar__wapper {
+  margin: 0 auto;
+}
+
 /* Medium screens (e.g. 1440px and below) */
-@media (max-width: 1440px) {
-  .container {
-    padding: 0 32px;
+@media (min-width: 1024px) and (max-width: 1440px) {
+
+  .container,
+  .container-navbar {
+    padding: 0 80px;
+    max-width: 100%;
+  }
+
+  .scisp-nav.scrolled .scisp-navbar .container {
+    padding: 0 80px;
+  }
+}
+
+@media (min-width: 1440px) {
+
+  .container,
+  .container-navbar {
+    padding: 0 80px;
     max-width: 1440px;
+  }
+
+  .scisp-navbar__wapper {
+    max-width: calc(1440px - 160px);
+  }
+
+  .scisp-nav.scrolled .scisp-navbar .container {
+    padding: 0 80px;
   }
 }
 
 /* Tablets (e.g. 1024px and below) */
 @media (max-width: 1024px) {
-  .container {
+
+  .container,
+  .container-navbar {
     padding: 0 24px;
     max-width: 100%;
+  }
+  .scisp-navbar__wapper {
+    max-width: calc(100% - 48px);
   }
 }
 
 /* Mobile devices (e.g. 768px and below) */
 @media (max-width: 768px) {
-  .container {
+
+  .container,
+  .container-navbar {
+    padding: 0 16px;
+  }
+  .scisp-navbar__wapper {
+    max-width: calc(100% - 32px);
+  }
+
+  .scisp-nav.scrolled .scisp-navbar .container {
     padding: 0 16px;
   }
 
@@ -1059,21 +1101,31 @@ body.no-scroll {
 }
 
 .scisp-nav {
-  transition: all .5s ease-in-out;
+  transition: all .8s ease-in-out;
 }
 
-.scisp-nav .main-header .container  {
-  transition: all .5s ease-in-out;
+.scisp-nav .main-header .container {
+  transition: all .8s ease-in-out;
 }
+
 .scisp-nav.scrolled .main-header .container {
-  padding: 0;
   top: 0;
-  transition: all .5s ease-in-out;
+  transition: all .8s ease-in-out;
+}
+
+.scisp-nav.scrolled .main-header .container-navbar {
+  max-width: 100%;
+  padding: 0;
+  transition: all .8s ease-in-out;
+}
+
+.scisp-nav .scisp-navbar .container {
+  padding: 0;
 }
 
 .scisp-nav.scrolled {
   top: -50px;
-  transition: all .5s ease-in-out;
+  transition: all .8s ease-in-out;
 }
 
 .scisp-nav.scrolled .scisp-navbar.rounded-8 {
@@ -1132,7 +1184,7 @@ body.no-scroll {
   transition: transform 0.3s ease-in-out;
 }
 
-.navbar-expand-xl .navbar-nav .nav-link:hover,
+/* .navbar-expand-xl .navbar-nav .nav-link:hover,
 .navbar-expand-xl .navbar-nav .nav-link.active {
   background-color: var(--primary-sa-600);
   color: var(--white);
@@ -1149,7 +1201,7 @@ body.no-scroll {
   border-radius: 12px;
   width: 0;
   transition: width 0.3s ease-in-out;
-}
+} */
 
 .navbar-expand-xl .navbar-nav .nav-link:hover::before,
 .navbar-expand-xl .navbar-nav .nav-link.active::before {
@@ -1557,7 +1609,7 @@ a.mega-menu-card:hover h3 {
 }
 
 .spcisp-role-slider .swiper-wrapper,
-.spcisp-news-slider .swiper-wrapper{
+.spcisp-news-slider .swiper-wrapper {
   padding-bottom: 60px;
 }
 
@@ -1570,7 +1622,8 @@ a.mega-menu-card:hover h3 {
   width: 16px;
   height: 16px;
   margin: 0;
-  /* background:var(--color-neutral-200); */
+  background: var(--color-neutral-200);
+  opacity: 1;
 }
 
 .swiper-pagination {
