--- a/css/style.css
+++ b/css/style.css
@@ -2083,7 +2083,6 @@ div#feedback-no-form-rating,
     padding: 0 24px;
     max-width: 100%;
   }
-
   .scisp-navbar__wapper {
     max-width: calc(100% - 48px);
   }
@@ -2109,8 +2108,7 @@ div#feedback-no-form-rating,
   }
 
   .scisp-nav .main-header .container,
-  .scisp-nav.scrolled .main-header .container,
-  .container.role-container-swiper {
+  .scisp-nav.scrolled .main-header .container {
     padding: 0;
 
   }
