faded for hero section

--- a/css/style.css
+++ b/css/style.css
@@ -1045,6 +1045,7 @@ body.no-scroll {
     padding: 0 24px;
     max-width: 100%;
   }
+
   .scisp-navbar__wapper {
     max-width: calc(100% - 48px);
   }
@@ -1057,6 +1058,7 @@ body.no-scroll {
   .container-navbar {
     padding: 0 16px;
   }
+
   .scisp-navbar__wapper {
     max-width: calc(100% - 32px);
   }
@@ -1675,7 +1677,17 @@ a.mega-menu-card:hover h3 {
   width: 100% !important;
   max-width: 100% !important;
 }
-
+.custom-tweet {
+  border-radius: 8px;
+  outline: 2px solid #1da1f2;
+  transition: transform 0.3s ease;
+}
+.custom-tweet body {
+  background-color: #067647;
+}
+.custom-tweet:hover {
+  transform: scale(1.01);
+}
 
 
 /*  Footer  */
