--- a/css/style.css
+++ b/css/style.css
@@ -1618,6 +1618,9 @@ a.mega-menu-card:hover h3 {
   width: 100%;
 }
 
+/* test */
+
+
 /*  Footer  */
 footer.scisp-footer {
   padding: 40px 0 24px 0;
