--- a/css/style.css
+++ b/css/style.css
@@ -2349,5 +2349,6 @@ div#feedback-no-form-rating,
 
 .rtl .scisp_footer__quick-links h4 {
   padding-left: 30px;
+  padding-right: 0;
 }
 /* rtl css end */
